--- a/locales/english.json
+++ b/locales/english.json
@@ -11,6 +11,10 @@
   "english-for-kids": "English for Kids",
   "business-english": "Business English",
   "conversational-english": "Conversational",
+  "reschedule": "Reschedule at another time",
+  "busy": "Busy at that time",
+  "asked": "Asked by the tutor",
+  "other1": "Other",
   "starters": "STARTERS",
   "movers": "MOVERS",
   "flyers": "FLYERS",
