--- a/locales/vietnamese.json
+++ b/locales/vietnamese.json
@@ -152,7 +152,8 @@
     "trick5": "5. Brand yourself and have fun!",
     "noteForVideo": "Lưu ý: Chúng tôi chỉ hỗ trợ tải lên video có kích thước nhỏ hơn 64 MB.",
     "chooseVideo": "Chọn video",
-    "finishSubmission": "Bạn đã hoàn thành đăng ký Vui lòng đợi phê duyệt"
+    "finishSubmission": "Bạn đã hoàn thành đăng ký Vui lòng đợi phê duyệt",
+    "addCertificate": "Thêm chứng nhận"
   },
   "wasLate": "Gia sư trễ giờ",
   "wasAbsent": "Gia sư vắng",
