show booking table & place a booking, add favorite & report in tutor detail page

--- a/locales/english.json
+++ b/locales/english.json
@@ -66,7 +66,7 @@
     "upcoming": "Upcoming lesson",
     "startIn": "Start in",
     "teachingIn": "Teaching in",
-    "enterUpcomingText": "Enter upcoming room",
+    "enterUpcomingText": "Enter lesson room",
     "totalTime": "Total lesson time is",
     "minutes": "minutes",
     "hours": "hours",
