Fix search courses & add env

--- a/locales/vietnamese.json
+++ b/locales/vietnamese.json
@@ -62,7 +62,7 @@
     "upcoming": "Buổi học sắp diễn ra",
     "enterUpcomingText": "Vào lớp học",
     "startIn": "Bắt đầu trong",
-    "teachingIn": "Đang dạy",
+    "classTime": "Giờ học",
     "totalTime": "Tổng số giờ bạn đã học",
     "minutes": "phút",
     "hours": "giờ",
