--- a/locales/english.json
+++ b/locales/english.json
@@ -66,7 +66,7 @@
   "tutor": {
     "upcoming": "Upcoming lesson",
     "startIn": "Start in",
-    "teachingIn": "Teaching in",
+    "classTime": "Class time",
     "enterUpcomingText": "Enter lesson room",
     "totalTime": "Total lesson time is",
     "minutes": "minutes",
